--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');
 *{
-    background-color: #171717;
+    background-color: #2C2C2E;
     width: auto;
     height: auto;
     color: white;
@@ -12,4 +12,68 @@
   font-family: "Monoton", sans-serif;
   font-weight: 400;
   font-style: normal;
+} */
+/* File: styles/global.css */
+/* 
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Segoe UI', sans-serif;
+  background-color: #111;
+  color: #fff;
+  scroll-behavior: smooth;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+}
+
+ul, li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+button {
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-family: inherit;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.section-label {
+  color: #31e890;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 0.85rem;
+  margin-bottom: 1rem;
+}
+
+.section-title {
+  font-size: 2rem;
+  font-weight: bold;
+  line-height: 1.3;
+  margin-bottom: 1rem;
+  color: #fff;
+  text-align: center;
+}
+
+.section-subtitle {
+  font-size: 0.95rem;
+  color: #ccc;
+  line-height: 1.6;
+  max-width: 800px;
+  margin: 0 auto 2rem;
+  text-align: center;
 } */
