--- a/src/Pages/AboutSection/AboutSection.css
+++ b/src/Pages/AboutSection/AboutSection.css
@@ -1,56 +1,84 @@
-.aboutSection {
+
+.about-section {
+  background-color: #2c2c2c;
+  color: #fff;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  background: linear-gradient(180deg, #0f0f0f 0%, #0a0a0a 100%);
-  color: white;
-  padding: 80px 60px;
-  font-family: 'Poppins', sans-serif;
-  gap: 60px;
+  gap: 4rem;
+  padding: -6rem 3rem;
+  font-family: 'Segoe UI', sans-serif;
+  position: relative; 
 }
 
-.imageContainer img {
-  width: 320px;
-  max-width: 100%;
+.about-image img {
+  width: auto;
+  height: auto;
+  object-fit: contain;
+  display: block;
+  filter: drop-shadow(0 0 20px rgba(61, 220, 129, 43.3));
+  background-color: transparent;
 }
 
-.textContainer {
-  max-width: 600px;
-}
 
-.subheading {
-  color: #00ff88;
-  font-weight: 600;
+.section-label {
+  color: #3DDC81;
   text-transform: uppercase;
-  margin-bottom: 12px;
-  font-size: 14px;
+  font-size: 0.85rem;
+  /* font-weight: bold; */
+  margin-bottom: 1rem;
 }
 
-.heading {
-  font-size: 38px;
-  font-weight: 700;
-  margin-bottom: 20px;
-  line-height: 1.3;
+.about-heading {
+  font-size: 4rem;
+  font-family: 'Titillium Web';
+  font-weight: 800;
+  line-height: 1.4;
+  margin-bottom: 1.5rem;
+  width: 93%;
 }
 
-.description {
-  color: #cfcfcf;
-  font-size: 14px;
-  line-height: 1.7;
-  margin-bottom: 30px;
+.about-description {
+  color: #ccc;
+  font-size: 1.5rem;
+  line-height: 1.2;
+  margin-bottom: 2rem;
 }
 
-.ctaButton {
-  background-color: #00ff88;
-  color: black;
+.about-button {
+  background-color: #3DDC81;
+  color: rgb(255, 255, 255);
+  padding: 0.6rem 1.4rem;
   font-weight: bold;
   border: none;
-  padding: 12px 24px;
-  border-radius: 25px;
+  border-radius: 1.6rem;
+  font-size: 0.9rem;
   cursor: pointer;
-  transition: background 0.3s ease;
+  transition: 0.3s ease;
 }
 
-.ctaButton:hover {
-  background-color: #00e67f;
+.about-button:hover {
+  background-color: #3DDC81;
+}
+
+/* .about-vector {
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: -2;
+  pointer-events: none;
+  background-color: transparent;
+} */
+ .about-vector{
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
+  pointer-events: none;
+  background-color: transparent;
+ }
+
+.about-vector img {
+  height: 550px;
+  padding-top: 300px;
+  margin-right:0px;
+  background-color: transparent;
 }
