--- a/src/Pages/ServiceSection/ServiceSection.css
+++ b/src/Pages/ServiceSection/ServiceSection.css
@@ -91,7 +91,7 @@
 .service-card h3 {
   font-size: 2rem;
   font-weight: 600;
-  margin: 0 0 0 0;
+  margin: 0;
   color: white;
   background-color: transparent;
   padding-bottom: 0px;
