--- a/src/Pages/ServiceSection/ServiceSection.css
+++ b/src/Pages/ServiceSection/ServiceSection.css
@@ -4,6 +4,7 @@
   text-align: center;
   font-family: 'Poppins', sans-serif;
   color: white;
+  z-index: -1;
 }
 
 /* Section Label */
@@ -60,12 +61,6 @@
   border: 2px solid #3ddc81;
   background-color: transparent;
   
-}
-
-.service-card.highlight .icon-wrapper {
-  /* background-color: #2c2c2c; */
-  /* border: 2px solid #3ddc81; */
-  /* padding-bottom: 150px; */
 }
 
 /* Icon Container */
