--- a/src/Pages/VisionariesSection/Visionaries.css
+++ b/src/Pages/VisionariesSection/Visionaries.css
@@ -9,23 +9,33 @@
   margin-bottom: 2rem;
   margin-top: 4rem;
 }
+.VisionariesText p{
+    color: #3ddc81;
+}
 
 .Visionaries {
   position: relative;
+  overflow: hidden;
 }
 
 .vectorpart {
   position: absolute;
   top: 0;
-  left: 0;
-  z-index: 2;
+  right: 0;
+  width: 100%;
+  height: 100%;
   pointer-events: none;
+  z-index: 2;
 }
 
 .vectorpart img {
-  width: 100%;
+  position: absolute;
+  top: -80px;
+  right: -60px;
+  width: 250px;
   height: auto;
-  opacity: 0.6;
+  opacity: 0.7;
+  z-index: 3;
 }
 
 .VisionariesImage {
@@ -39,7 +49,7 @@
   z-index: 1;
   background-image: url('/src/Pages/VisionariesSection/CentreCircle.png');
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: 50% 25%;
   background-size: 600px;
   background-color: transparent;
 }
@@ -53,32 +63,6 @@
   position: relative;
   z-index: 2;
   background-color: transparent;
-}
-
-.circle-divider {
-  width: 30px;
-  height: 30px;
-  background-color: #3ddc81;
-  border-radius: 50%;
-  margin: -1rem auto;
-  z-index: 3;
-  box-shadow: 0 0 60px 30px rgba(61, 220, 129, 0.15);
-  display: none;
-}
-
-.VisionariesImage::before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 400px;
-  height: 400px;
-  background: radial-gradient(circle, rgba(61, 220, 129, 0.12), transparent 70%);
-  z-index: 0;
-  pointer-events: none;
-  filter: blur(40px);
-  display: none;
 }
 
 .VisionariesImage img {
@@ -98,11 +82,17 @@
 
   .top-layer,
   .bottom-layer {
-    gap: 1.5rem;
+    gap: 2rem;
   }
 
   .VisionariesImage img {
     max-width: 160px;
+  }
+
+  .vectorpart img {
+    width: 300px;
+    top: -60px;
+    right: -30px;
   }
 }
 
@@ -115,5 +105,11 @@
 
   .VisionariesImage img {
     max-width: 100%;
+  }
+
+  .vectorpart img {
+    width: 200px;
+    top: -30px;
+    right: -10px;
   }
 }
